[package]
name = "bevy_level"
version = "0.0.1"
edition = "2021"
authors = ["Bevy Contributors <bevyengine@gmail.com>", "Carter Anderson <mcanders1@gmail.com>"]
homepage = "https://bevyengine.org"
repository = "https://github.com/codercommand/bevy_level"
description = "Reserved crate name for a level system I'm planning on making an RFC for in the Bevy Engine project"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
